@@ -93,12 +93,14 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
 
     //suffix (in dspace.cfg) for input formats supported by each filter
     private static final String INPUT_FORMATS_SUFFIX = "inputFormats";
-    private final GroupService groupService = EPersonServiceFactory.getInstance().getGroupService();
-    private final SearchService searchService = SearchUtils.getSearchService();
-    private final ConfigurationService configurationService =
-        DSpaceServicesFactory.getInstance().getConfigurationService();
+
     private Path tempDir;
     private String tempFilePath;
+
+    private final GroupService groupService = EPersonServiceFactory.getInstance().getGroupService();
+    private final SearchService searchService = SearchUtils.getSearchService();
+    private final ConfigurationService configurationService = DSpaceServicesFactory.getInstance()
+                                                                                   .getConfigurationService();
 
     @Before
     @Override
@@ -1864,14 +1866,16 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
         context.restoreAuthSystemState();
 
         // JSON without constraints: apply to ALL items
-        String json = "{ \"item\": {"
-            + " \"mode\": \"add\","
-            + " \"accessConditions\": ["
-            + "     {"
-            + "       \"name\": \"openaccess\""
-            + "     }"
-            + " ]"
-            + "} }";
+        String json = """
+            { "item": {
+                  "mode": "add",
+                  "accessConditions": [
+                      {
+                        "name": "openaccess"
+                      }
+                  ]
+               }}
+            """;
 
         buildJsonFile(json);
 
@@ -1896,7 +1900,7 @@ public class BulkAccessControlIT extends AbstractIntegrationTestWithDatabase {
                                                     int endIdx = msg.indexOf("}", startIdx);
                                                     return UUID.fromString(msg.substring(startIdx, endIdx));
                                                 })
-                                                .collect(Collectors.toList());
+                                                .toList();
 
         Set<UUID> uniqueUpdatedItemIDs = new HashSet<>(updatedItemIDs);
 
